# Hello-GiNaC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Hello-GiNaC/: CMakeLists.txt  Hello-GiNaC.cpp  Hello-GiNaC.h
