# CMakeList.txt : CMake project for Hello-GiNaC, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Hello-GiNaC "Hello-GiNaC.cpp" "Hello-GiNaC.h")

# TODO: Add tests and install targets if needed.
